# ffbo.neuroarch_nlp

./: README.md  pyproject.toml  setup.py
neuroarch_nlp/: __init__.py  codegen.py  interface.py  test.py  version.py
neuroarch_nlp/data/: __init__.py  defaults.py
neuroarch_nlp/fib19/: codegen.py  defaults.py  grammar.py  grammar_semantics.py  neuron_types.json
neuroarch_nlp/flycircuit/: codegen.py  defaults.py  grammar.py  grammar_semantics.py
neuroarch_nlp/flywire/: codegen.py  defaults.py  grammar.py  grammar_semantics.py  neuron_types.json
neuroarch_nlp/hemibrain/: codegen.py  defaults.py  grammar.py  grammar_semantics.py  neuron_types.json  settings.py
neuroarch_nlp/l1em/: codegen.py  defaults.py  grammar.py  grammar_semantics.py
neuroarch_nlp/l1em3000/: codegen.py  defaults.py  grammar.py  grammar_semantics.py
neuroarch_nlp/manc/: codegen.py  defaults.py  grammar.py  grammar_semantics.py  neuron_types.json
neuroarch_nlp/medulla/: codegen.py  defaults.py  grammar.py  grammar_semantics.py  neuron_types.json
neuroarch_nlp/optic_lobe/: codegen.py  col_ring.json  defaults.py  defaults_full.py  defaults_long.py  dsl.py  grammar.py  grammar_semantics.py  neuron_types.json  ring_col.json
neuroarch_nlp/quepy_analysis/: dsl.py  grammar.py  grammar_semantics.py
tests/: gold_in_out  test_all_against_gold.py
